# Blockchain

./: .env  DEPLOYMENT.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  start.sh  streamlit_app.py
backend/: app.py  blockchain.py  ml_model.py
blockchain/: ForwardContract.sol
data/: prices.csv
